--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,4 +8,4 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: peterjgrainger/action-changelog-reminder@v4-release
+    - uses: peterjgrainger/test-action@master
