--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,5 +9,5 @@ jobs:
     
     steps:
     - uses: peterjgrainger/test-action@master
-      with: 
-        token: {{ secrets.GITHUB_TOKEN }}
+      env: 
+        GITHUB_TOKEN: {{ secrets.GITHUB_TOKEN }}
