--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,9 @@ jobs:
   reminder:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@main
     - name: Changelog Reminder
-      uses: peterjgrainger/action-changelog-reminder@custom-message
+      uses: peterjgrainger/action-changelog-reminder@master
       with:
         changelog_regex: '/change_log\/.*\/*.yml'
         customPrMessage: 'w00t custom PR'
